[workspace]

members = [
    "packages/hapi-grpc",
    "packages/rs-hapi-grpc-macros",
    "packages/rs-hpp",
    "packages/rs-drive",
    "packages/rs-platform-value",
    "packages/rs-platform-serialization",
    "packages/rs-platform-serialization-derive",
    "packages/rs-platform-version",
    "packages/rs-platform-versioning",
    "packages/rs-platform-value-convertible",
    "packages/rs-drive-abci",
    "packages/hellarpay-contract",
    "packages/withdrawals-contract",
    "packages/masternode-reward-shares-contract",
    "packages/feature-flags-contract",
    "packages/hpns-contract",
    "packages/data-contracts",
    "packages/rs-drive-proof-verifier",
    "packages/wasm-hpp",
    "packages/rs-hapi-client",
    "packages/rs-sdk",
    "packages/strategy-tests",
    "packages/simple-signer",
]
